buildscript {
    repositories {
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }
    dependencies {
        classpath "org.openapitools:openapi-generator-gradle-plugin:5.4.0"
    }
}

plugins {
    id 'java'
    id 'org.springframework.boot' version '2.5.3'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'

    id 'org.openapi.generator' version '5.4.0'

    id 'org.sonarqube' version '3.3'
    id 'jacoco'
    id 'checkstyle'
}

java {
    group = 'app.bpartners'
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenLocal()
    mavenCentral()
}

task generateJavaClient(type: org.openapitools.generator.gradle.plugin.tasks.GenerateTask) {
    generatorName = "java"
    inputSpec = "$rootDir/doc/api.yml".toString()
    outputDir = "$buildDir/gen".toString()
    apiPackage = "app.bpartners.api.endpoint.rest.api"
    invokerPackage = "app.bpartners.api.endpoint.rest.client"
    modelPackage = "app.bpartners.api.endpoint.rest.model"

    configOptions = [
            serializationLibrary: "jackson",
            dateLibrary         : "custom"
    ]
    typeMappings = [
            // What date-time type to use when? https://i.stack.imgur.com/QPhGW.png
            Date    : "java.time.LocalDate",
            DateTime: "java.time.Instant",
    ]
    library = "native"

    groupId = 'app.bpartners'
    id = 'api-rest'
    skipValidateSpec = false
    logToStderr = true
    generateAliasAsModel = false
    enablePostProcessFile = false
}
task generateReactClient(type: org.openapitools.generator.gradle.plugin.tasks.GenerateTask) {
    generatorName = "typescript-axios"
    inputSpec = "$rootDir/doc/api.yml".toString()
    outputDir = "$buildDir/gen-react-client".toString()
    typeMappings = [
            Date    : "Date",
            DateTime: "Date",
    ]
    additionalProperties = [
            /* // allOf is buggy when used withSeparateModelsAndApi
               // https://github.com/OpenAPITools/openapi-generator/issues/9163
            withSeparateModelsAndApi : true,
            apiPackage : "api",
            modelPackage : "models", */
            enumPropertyNaming: "original",
            npmName           : "bpartners-react-client",
            npmVersion        : project.properties["args"] ?: "latest"
    ]
}
task publishJavaClientToMavenLocal(type: Exec, dependsOn: generateJavaClient) {
    if (org.apache.tools.ant.taskdefs.condition.Os.isFamily(org.apache.tools.ant.taskdefs.condition.Os.FAMILY_WINDOWS)) {
        commandLine './.shell/publish_gen_to_maven_local.bat'
    } else {
        commandLine './.shell/publish_gen_to_maven_local.sh'
    }
}
tasks.compileJava.dependsOn publishJavaClientToMavenLocal

apply plugin: 'checkstyle'
checkstyle {
    toolVersion '8.45'
    configFile file("config/checkstyle/google_checks_custom.xml")
}
checkstyleMain {
    source = 'src/main/java'
}
checkstyleTest {
    source = 'src/test/java'
}
tasks.withType(Checkstyle) {
    reports {
        xml.enabled true
    }
}

ext {
    set('testcontainersVersion', "1.15.3")
}
test {
    minHeapSize '4g' // won't change perf even if increase
    maxHeapSize '200g'
    maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
    exclude '**/BridgeIT.class'
    exclude '**/DraftIT.class'
    exclude '**/InvoiceCrupdatedServiceTest.class'
    exclude '**/BridgeAccountRepositoryImplTest.class'
    exclude '**/ExpressifIT.class'
    exclude '**/CalendarIT.class'
    exclude '**/SheetIT.class'
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}
jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
    }
}

dependencies {
    implementation 'com.google.api-client:google-api-client:2.2.0'
    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
    //API Calendar
    implementation 'com.google.apis:google-api-services-calendar:v3-rev20220715-2.0.0'
    //API Drive
    implementation 'com.google.apis:google-api-services-drive:v3-rev20220815-2.0.0'
    //API Sheets
    implementation 'com.google.apis:google-api-services-sheets:v4-rev20220927-2.0.0'


    implementation 'app.bpartners:api-rest:latest'

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    implementation 'com.sendinblue:sib-api-v3-sdk:6.0.0'

    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    implementation 'com.nimbusds:nimbus-jose-jwt'

    implementation 'com.vladmihalcea:hibernate-types-52:1.0.0'
    implementation 'io.hypersistence:hypersistence-utils-hibernate-55:3.5.1'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.postgresql:postgresql'

    implementation 'software.amazon.awssdk:s3-transfer-manager:2.17.271-PREVIEW'
    implementation 'software.amazon.awssdk:eventbridge:2.20.136'
    implementation 'software.amazon.awssdk:sqs:2.20.136'
    implementation 'software.amazon.awssdk:cognitoidentityprovider:2.17.109'
    implementation 'software.amazon.awssdk:ssm:2.17.109'
    implementation 'software.amazon.awssdk:transfer:2.17.271'
    implementation 'software.amazon.awssdk:ses:2.17.292'
    implementation 'software.amazon.awssdk:protocol-core:2.17.292'
    implementation 'software.amazon.awssdk:sns:2.20.153'
    implementation 'org.springframework.retry:spring-retry:1.3.1'
    annotationProcessor 'software.amazon.awssdk:s3:2.17.271'

    implementation 'io.sentry:sentry-spring-boot-starter:5.5.3'
    implementation 'io.sentry:sentry-logback:5.5.3'

    implementation 'org.apache.tika:tika-core:1.18'
    implementation 'org.thymeleaf:thymeleaf:3.0.15.RELEASE'
    implementation 'org.xhtmlrenderer:flying-saucer-pdf:9.1.22'

    implementation 'com.google.zxing:core:3.5.0'
    implementation 'com.google.zxing:javase:3.5.0'

    implementation 'jakarta.mail:jakarta.mail-api:2.1.0'
    implementation 'com.sun.mail:jakarta.mail:1.6.5'

    implementation 'org.apfloat:apfloat:1.10.1'

    implementation 'org.apache.poi:poi:3.12'
    implementation 'org.apache.poi:poi-ooxml:3.12'

    implementation 'org.jsoup:jsoup:1.15.3'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    testImplementation 'com.github.javafaker:javafaker:1.0.2'

    testImplementation 'com.amazonaws:aws-java-sdk-s3:1.12.315'

    testImplementation 'org.mockito:mockito-inline:4.6.1'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:postgresql'
    testImplementation 'org.testcontainers:localstack'
}

dependencyManagement {
    imports {
        mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
    }
}